Avance6: Ejecución de Expresiones y Estatutos Secuenciales. Mapa de Memoria en Ejecución/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> gotomain PROGRAMA addDir ID SEMI programa2
Rule 2     programa2 -> atributos programa2
Rule 3     programa2 -> programa3
Rule 4     programa3 -> metodos programa3
Rule 5     programa3 -> programa4
Rule 6     programa4 -> setmainloc principal
Rule 7     atributos -> ATRIBUTOS addDir var
Rule 8     metodos -> METODOS funciones
Rule 9     principal -> PRINCIPAL LPAREN estatutos principal2
Rule 10    principal2 -> estatutos principal2
Rule 11    principal2 -> RPAREN
Rule 12    funciones -> tipo funciones2
Rule 13    funciones -> VOID funciones2
Rule 14    funciones2 -> FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
Rule 15    funciones2 -> FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
Rule 16    funciones2 -> FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3
Rule 17    funciones3 -> estatutos RBRACES addDir funciones
Rule 18    funciones3 -> estatutos RBRACES addDir
Rule 19    funciones3 -> estatutos funciones3
Rule 20    parametros -> tipo ID setCurrentID addValueVarT newParamType COMMA parametros
Rule 21    parametros -> tipo ID setCurrentID addValueVarT newParamType
Rule 22    retornar -> RETURN returnFlag LPAREN retornar2
Rule 23    retornar2 -> exp cuadRetornar COMMA retornar2
Rule 24    retornar2 -> exp cuadRetornar RPAREN
Rule 25    var -> tipo COLON var2
Rule 26    var2 -> ID setCurrentID addValueVarT var3
Rule 27    var2 -> ID setCurrentID addValueVarT LBRACKET CTE_I RBRACKET var3
Rule 28    var2 -> ID setCurrentID addValueVarT LBRACKET CTE_I RBRACKET LBRACKET CTE_I RBRACKET var3
Rule 29    var3 -> COMMA var2
Rule 30    var3 -> SEMI var
Rule 31    var3 -> SEMI
Rule 32    tipo -> INT
Rule 33    tipo -> FLOAT
Rule 34    tipo -> CHAR
Rule 35    tipo -> BOOL
Rule 36    exp -> texp checarexp
Rule 37    exp -> exp addOL exp
Rule 38    texp -> gexp checarexp
Rule 39    texp -> texp addOL texp
Rule 40    gexp -> mexp checarexp
Rule 41    gexp -> gexp gexp2 gexp
Rule 42    gexp2 -> LT addO
Rule 43    gexp2 -> LE addO
Rule 44    gexp2 -> GT addO
Rule 45    gexp2 -> GE addO
Rule 46    gexp2 -> EQ addO
Rule 47    gexp2 -> NE addO
Rule 48    mexp -> t checarexp
Rule 49    mexp -> mexp mexp2
Rule 50    mexp2 -> PLUS addO mexp
Rule 51    mexp2 -> MINUS addO mexp
Rule 52    t -> f checarexp
Rule 53    t -> t t2
Rule 54    t2 -> MULT addO t
Rule 55    t2 -> DIV addO t
Rule 56    t2 -> MOD addO t
Rule 57    f -> LPAREN addFakeBottom exp RPAREN popFakeBottom
Rule 58    f -> CTE_I addIntType
Rule 59    f -> CTE_F addFloatType
Rule 60    f -> CTE_S addCharType
Rule 61    f -> TRUE addBoolType
Rule 62    f -> FALSE addBoolType
Rule 63    f -> llamada
Rule 64    f -> ID
Rule 65    estatutos -> estatutos2 estatutos
Rule 66    estatutos -> estatutos2
Rule 67    estatutos2 -> asigna
Rule 68    estatutos2 -> llamada
Rule 69    estatutos2 -> lee
Rule 70    estatutos2 -> escribe
Rule 71    estatutos2 -> condicion
Rule 72    estatutos2 -> ciclow
Rule 73    estatutos2 -> ciclof
Rule 74    estatutos2 -> funciones
Rule 75    estatutos2 -> retornar
Rule 76    asigna -> ID EQUALS asignarid exp SEMI
Rule 77    llamada -> ID callFunc LPAREN exp genParameter llamada2
Rule 78    genParameter -> <empty>
Rule 79    llamada2 -> COMMA paramCounter exp genParameter llamada2
Rule 80    llamada2 -> verLastParam RPAREN
Rule 81    lee -> LEE LPAREN exp cuadlee lee2
Rule 82    lee2 -> COMMA exp cuadlee lee2
Rule 83    lee2 -> RPAREN
Rule 84    escribe -> ESCRIBIR LPAREN exp cuadprint escribe2
Rule 85    escribe2 -> COMMA exp cuadprint escribe2
Rule 86    escribe2 -> RPAREN
Rule 87    condicion -> IF condicion2
Rule 88    condicion2 -> LPAREN exp RPAREN genGTF condicion3 ELSEIF genElse condicion2
Rule 89    condicion2 -> LPAREN exp RPAREN genGTF condicion3 ELSE genElse condicion3
Rule 90    condicion2 -> LPAREN exp RPAREN genGTF condicion3
Rule 91    condicion3 -> LBRACES estatutos fillGoto RBRACES
Rule 92    ciclow -> WHILE storeWhile LPAREN exp RPAREN genGTF DO LBRACES estatutos RBRACES fillWhile
Rule 93    ciclow -> DO storeWhile LBRACES estatutos RBRACES WHILE LPAREN exp RPAREN genDoWhile
Rule 94    ciclof -> FOR ciclof2
Rule 95    ciclof2 -> ciclof3 ciclof2
Rule 96    ciclof2 -> ciclof3
Rule 97    ciclof3 -> ID addForId EQUALS exp genFor TO exp compFor DO LBRACES estatutos RBRACES actFor
Rule 98    addDir -> <empty>
Rule 99    setCurrentID -> <empty>
Rule 100   addValueVarT -> <empty>
Rule 101   addFakeBottom -> <empty>
Rule 102   popFakeBottom -> <empty>
Rule 103   addO -> <empty>
Rule 104   addOL -> LOR
Rule 105   addOL -> LAND
Rule 106   checarexp -> <empty>
Rule 107   addIntType -> <empty>
Rule 108   addFloatType -> <empty>
Rule 109   addCharType -> <empty>
Rule 110   addBoolType -> <empty>
Rule 111   asignarid -> <empty>
Rule 112   gotomain -> <empty>
Rule 113   setmainloc -> <empty>
Rule 114   cuadprint -> <empty>
Rule 115   cuadlee -> <empty>
Rule 116   returnFlag -> <empty>
Rule 117   cuadRetornar -> <empty>
Rule 118   genGTF -> <empty>
Rule 119   genElse -> <empty>
Rule 120   fillGoto -> <empty>
Rule 121   storeWhile -> <empty>
Rule 122   genDoWhile -> <empty>
Rule 123   fillWhile -> <empty>
Rule 124   addForId -> <empty>
Rule 125   genFor -> <empty>
Rule 126   compFor -> <empty>
Rule 127   actFor -> <empty>
Rule 128   newParamType -> <empty>
Rule 129   addParamCount -> <empty>
Rule 130   addContF -> <empty>
Rule 131   callFunc -> <empty>
Rule 132   paramCounter -> <empty>
Rule 133   verLastParam -> <empty>

Terminals, with rules where they appear

ATRIBUTOS            : 7
BOOL                 : 35
CHAR                 : 34
COLON                : 25
COMMA                : 20 23 29 79 82 85
CTE_F                : 59
CTE_I                : 27 28 28 58
CTE_S                : 60
DIV                  : 55
DO                   : 92 93 97
ELSE                 : 89
ELSEIF               : 88
EQ                   : 46
EQUALS               : 76 97
ESCRIBIR             : 84
FALSE                : 62
FLOAT                : 33
FOR                  : 94
FUNCION              : 14 15 16
GE                   : 45
GT                   : 44
ID                   : 1 14 15 16 20 21 26 27 28 64 76 77 97
IF                   : 87
INT                  : 32
LAND                 : 105
LBRACES              : 14 15 16 91 92 93 97
LBRACKET             : 27 28 28
LE                   : 43
LEE                  : 81
LOR                  : 104
LPAREN               : 9 14 15 16 22 57 77 81 84 88 89 90 92 93
LT                   : 42
METODOS              : 8
MINUS                : 51
MOD                  : 56
MULT                 : 54
NE                   : 47
PLUS                 : 50
PRINCIPAL            : 9
PROGRAMA             : 1
RBRACES              : 17 18 91 92 93 97
RBRACKET             : 27 28 28
RETURN               : 22
RPAREN               : 11 14 15 16 24 57 80 83 86 88 89 90 92 93
SEMI                 : 1 30 31 76
TO                   : 97
TRUE                 : 61
VOID                 : 13
WHILE                : 92 93
error                : 

Nonterminals, with rules where they appear

actFor               : 97
addBoolType          : 61 62
addCharType          : 60
addContF             : 14 15 16
addDir               : 1 7 14 14 15 15 16 16 17 18
addFakeBottom        : 57
addFloatType         : 59
addForId             : 97
addIntType           : 58
addO                 : 42 43 44 45 46 47 50 51 54 55 56
addOL                : 37 39
addParamCount        : 14 15 16
addValueVarT         : 20 21 26 27 28
asigna               : 67
asignarid            : 76
atributos            : 2 14
callFunc             : 77
checarexp            : 36 38 40 48 52
ciclof               : 73
ciclof2              : 94 95
ciclof3              : 95 96
ciclow               : 72
compFor              : 97
condicion            : 71
condicion2           : 87 88
condicion3           : 88 89 89 90
cuadRetornar         : 23 24
cuadlee              : 81 82
cuadprint            : 84 85
escribe              : 70
escribe2             : 84 85
estatutos            : 9 10 17 18 19 65 91 92 93 97
estatutos2           : 65 66
exp                  : 23 24 37 37 57 76 77 79 81 82 84 85 88 89 90 92 93 97 97
f                    : 52
fillGoto             : 91
fillWhile            : 92
funciones            : 8 17 74
funciones2           : 12 13
funciones3           : 14 15 16 19
genDoWhile           : 93
genElse              : 88 89
genFor               : 97
genGTF               : 88 89 90 92
genParameter         : 77 79
gexp                 : 38 41 41
gexp2                : 41
gotomain             : 1
lee                  : 69
lee2                 : 81 82
llamada              : 63 68
llamada2             : 77 79
metodos              : 4
mexp                 : 40 49 50 51
mexp2                : 49
newParamType         : 20 21
paramCounter         : 79
parametros           : 14 15 16 20
popFakeBottom        : 57
principal            : 6
principal2           : 9 10
programa             : 0
programa2            : 1 2
programa3            : 3 4
programa4            : 5
retornar             : 75
retornar2            : 22 23
returnFlag           : 22
setCurrentID         : 20 21 26 27 28
setmainloc           : 6
storeWhile           : 92 93
t                    : 48 53 54 55 56
t2                   : 53
texp                 : 36 39 39
tipo                 : 12 20 21 25
var                  : 7 16 30
var2                 : 25 29
var3                 : 26 27 28
verLastParam         : 80

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . gotomain PROGRAMA addDir ID SEMI programa2
    (112) gotomain -> .

    PROGRAMA        reduce using rule 112 (gotomain -> .)

    programa                       shift and go to state 1
    gotomain                       shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> gotomain . PROGRAMA addDir ID SEMI programa2

    PROGRAMA        shift and go to state 3


state 3

    (1) programa -> gotomain PROGRAMA . addDir ID SEMI programa2
    (98) addDir -> .

    ID              reduce using rule 98 (addDir -> .)

    addDir                         shift and go to state 4

state 4

    (1) programa -> gotomain PROGRAMA addDir . ID SEMI programa2

    ID              shift and go to state 5


state 5

    (1) programa -> gotomain PROGRAMA addDir ID . SEMI programa2

    SEMI            shift and go to state 6


state 6

    (1) programa -> gotomain PROGRAMA addDir ID SEMI . programa2
    (2) programa2 -> . atributos programa2
    (3) programa2 -> . programa3
    (7) atributos -> . ATRIBUTOS addDir var
    (4) programa3 -> . metodos programa3
    (5) programa3 -> . programa4
    (8) metodos -> . METODOS funciones
    (6) programa4 -> . setmainloc principal
    (113) setmainloc -> .

    ATRIBUTOS       shift and go to state 10
    METODOS         shift and go to state 13
    PRINCIPAL       reduce using rule 113 (setmainloc -> .)

    programa2                      shift and go to state 7
    atributos                      shift and go to state 8
    programa3                      shift and go to state 9
    metodos                        shift and go to state 11
    programa4                      shift and go to state 12
    setmainloc                     shift and go to state 14

state 7

    (1) programa -> gotomain PROGRAMA addDir ID SEMI programa2 .

    $end            reduce using rule 1 (programa -> gotomain PROGRAMA addDir ID SEMI programa2 .)


state 8

    (2) programa2 -> atributos . programa2
    (2) programa2 -> . atributos programa2
    (3) programa2 -> . programa3
    (7) atributos -> . ATRIBUTOS addDir var
    (4) programa3 -> . metodos programa3
    (5) programa3 -> . programa4
    (8) metodos -> . METODOS funciones
    (6) programa4 -> . setmainloc principal
    (113) setmainloc -> .

    ATRIBUTOS       shift and go to state 10
    METODOS         shift and go to state 13
    PRINCIPAL       reduce using rule 113 (setmainloc -> .)

    atributos                      shift and go to state 8
    programa2                      shift and go to state 15
    programa3                      shift and go to state 9
    metodos                        shift and go to state 11
    programa4                      shift and go to state 12
    setmainloc                     shift and go to state 14

state 9

    (3) programa2 -> programa3 .

    $end            reduce using rule 3 (programa2 -> programa3 .)


state 10

    (7) atributos -> ATRIBUTOS . addDir var
    (98) addDir -> .

    INT             reduce using rule 98 (addDir -> .)
    FLOAT           reduce using rule 98 (addDir -> .)
    CHAR            reduce using rule 98 (addDir -> .)
    BOOL            reduce using rule 98 (addDir -> .)

    addDir                         shift and go to state 16

state 11

    (4) programa3 -> metodos . programa3
    (4) programa3 -> . metodos programa3
    (5) programa3 -> . programa4
    (8) metodos -> . METODOS funciones
    (6) programa4 -> . setmainloc principal
    (113) setmainloc -> .

    METODOS         shift and go to state 13
    PRINCIPAL       reduce using rule 113 (setmainloc -> .)

    metodos                        shift and go to state 11
    programa3                      shift and go to state 17
    programa4                      shift and go to state 12
    setmainloc                     shift and go to state 14

state 12

    (5) programa3 -> programa4 .

    $end            reduce using rule 5 (programa3 -> programa4 .)


state 13

    (8) metodos -> METODOS . funciones
    (12) funciones -> . tipo funciones2
    (13) funciones -> . VOID funciones2
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (35) tipo -> . BOOL

    VOID            shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

    funciones                      shift and go to state 18
    tipo                           shift and go to state 19

state 14

    (6) programa4 -> setmainloc . principal
    (9) principal -> . PRINCIPAL LPAREN estatutos principal2

    PRINCIPAL       shift and go to state 26

    principal                      shift and go to state 25

state 15

    (2) programa2 -> atributos programa2 .

    $end            reduce using rule 2 (programa2 -> atributos programa2 .)


state 16

    (7) atributos -> ATRIBUTOS addDir . var
    (25) var -> . tipo COLON var2
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (35) tipo -> . BOOL

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

    var                            shift and go to state 27
    tipo                           shift and go to state 28

state 17

    (4) programa3 -> metodos programa3 .

    $end            reduce using rule 4 (programa3 -> metodos programa3 .)


state 18

    (8) metodos -> METODOS funciones .

    METODOS         reduce using rule 8 (metodos -> METODOS funciones .)
    PRINCIPAL       reduce using rule 8 (metodos -> METODOS funciones .)


state 19

    (12) funciones -> tipo . funciones2
    (14) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
    (15) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
    (16) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3

    FUNCION         shift and go to state 30

    funciones2                     shift and go to state 29

state 20

    (13) funciones -> VOID . funciones2
    (14) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
    (15) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
    (16) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3

    FUNCION         shift and go to state 30

    funciones2                     shift and go to state 31

state 21

    (32) tipo -> INT .

    FUNCION         reduce using rule 32 (tipo -> INT .)
    COLON           reduce using rule 32 (tipo -> INT .)
    ID              reduce using rule 32 (tipo -> INT .)


state 22

    (33) tipo -> FLOAT .

    FUNCION         reduce using rule 33 (tipo -> FLOAT .)
    COLON           reduce using rule 33 (tipo -> FLOAT .)
    ID              reduce using rule 33 (tipo -> FLOAT .)


state 23

    (34) tipo -> CHAR .

    FUNCION         reduce using rule 34 (tipo -> CHAR .)
    COLON           reduce using rule 34 (tipo -> CHAR .)
    ID              reduce using rule 34 (tipo -> CHAR .)


state 24

    (35) tipo -> BOOL .

    FUNCION         reduce using rule 35 (tipo -> BOOL .)
    COLON           reduce using rule 35 (tipo -> BOOL .)
    ID              reduce using rule 35 (tipo -> BOOL .)


state 25

    (6) programa4 -> setmainloc principal .

    $end            reduce using rule 6 (programa4 -> setmainloc principal .)


state 26

    (9) principal -> PRINCIPAL . LPAREN estatutos principal2

    LPAREN          shift and go to state 32


state 27

    (7) atributos -> ATRIBUTOS addDir var .

    ATRIBUTOS       reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    METODOS         reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    PRINCIPAL       reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    ID              reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    LEE             reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    ESCRIBIR        reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    IF              reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    WHILE           reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    DO              reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    FOR             reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    VOID            reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    RETURN          reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    INT             reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    FLOAT           reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    CHAR            reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    BOOL            reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)


state 28

    (25) var -> tipo . COLON var2

    COLON           shift and go to state 33


state 29

    (12) funciones -> tipo funciones2 .

    METODOS         reduce using rule 12 (funciones -> tipo funciones2 .)
    PRINCIPAL       reduce using rule 12 (funciones -> tipo funciones2 .)
    ID              reduce using rule 12 (funciones -> tipo funciones2 .)
    LEE             reduce using rule 12 (funciones -> tipo funciones2 .)
    ESCRIBIR        reduce using rule 12 (funciones -> tipo funciones2 .)
    IF              reduce using rule 12 (funciones -> tipo funciones2 .)
    WHILE           reduce using rule 12 (funciones -> tipo funciones2 .)
    DO              reduce using rule 12 (funciones -> tipo funciones2 .)
    FOR             reduce using rule 12 (funciones -> tipo funciones2 .)
    VOID            reduce using rule 12 (funciones -> tipo funciones2 .)
    RETURN          reduce using rule 12 (funciones -> tipo funciones2 .)
    INT             reduce using rule 12 (funciones -> tipo funciones2 .)
    FLOAT           reduce using rule 12 (funciones -> tipo funciones2 .)
    CHAR            reduce using rule 12 (funciones -> tipo funciones2 .)
    BOOL            reduce using rule 12 (funciones -> tipo funciones2 .)
    RPAREN          reduce using rule 12 (funciones -> tipo funciones2 .)
    RBRACES         reduce using rule 12 (funciones -> tipo funciones2 .)


state 30

    (14) funciones2 -> FUNCION . ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
    (15) funciones2 -> FUNCION . ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
    (16) funciones2 -> FUNCION . ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3

    ID              shift and go to state 34


state 31

    (13) funciones -> VOID funciones2 .

    METODOS         reduce using rule 13 (funciones -> VOID funciones2 .)
    PRINCIPAL       reduce using rule 13 (funciones -> VOID funciones2 .)
    ID              reduce using rule 13 (funciones -> VOID funciones2 .)
    LEE             reduce using rule 13 (funciones -> VOID funciones2 .)
    ESCRIBIR        reduce using rule 13 (funciones -> VOID funciones2 .)
    IF              reduce using rule 13 (funciones -> VOID funciones2 .)
    WHILE           reduce using rule 13 (funciones -> VOID funciones2 .)
    DO              reduce using rule 13 (funciones -> VOID funciones2 .)
    FOR             reduce using rule 13 (funciones -> VOID funciones2 .)
    VOID            reduce using rule 13 (funciones -> VOID funciones2 .)
    RETURN          reduce using rule 13 (funciones -> VOID funciones2 .)
    INT             reduce using rule 13 (funciones -> VOID funciones2 .)
    FLOAT           reduce using rule 13 (funciones -> VOID funciones2 .)
    CHAR            reduce using rule 13 (funciones -> VOID funciones2 .)
    BOOL            reduce using rule 13 (funciones -> VOID funciones2 .)
    RPAREN          reduce using rule 13 (funciones -> VOID funciones2 .)
    RBRACES         reduce using rule 13 (funciones -> VOID funciones2 .)


state 32

    (9) principal -> PRINCIPAL LPAREN . estatutos principal2
    (65) estatutos -> . estatutos2 estatutos
    (66) estatutos -> . estatutos2
    (67) estatutos2 -> . asigna
    (68) estatutos2 -> . llamada
    (69) estatutos2 -> . lee
    (70) estatutos2 -> . escribe
    (71) estatutos2 -> . condicion
    (72) estatutos2 -> . ciclow
    (73) estatutos2 -> . ciclof
    (74) estatutos2 -> . funciones
    (75) estatutos2 -> . retornar
    (76) asigna -> . ID EQUALS asignarid exp SEMI
    (77) llamada -> . ID callFunc LPAREN exp genParameter llamada2
    (81) lee -> . LEE LPAREN exp cuadlee lee2
    (84) escribe -> . ESCRIBIR LPAREN exp cuadprint escribe2
    (87) condicion -> . IF condicion2
    (92) ciclow -> . WHILE storeWhile LPAREN exp RPAREN genGTF DO LBRACES estatutos RBRACES fillWhile
    (93) ciclow -> . DO storeWhile LBRACES estatutos RBRACES WHILE LPAREN exp RPAREN genDoWhile
    (94) ciclof -> . FOR ciclof2
    (12) funciones -> . tipo funciones2
    (13) funciones -> . VOID funciones2
    (22) retornar -> . RETURN returnFlag LPAREN retornar2
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (35) tipo -> . BOOL

    ID              shift and go to state 46
    LEE             shift and go to state 47
    ESCRIBIR        shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    VOID            shift and go to state 20
    RETURN          shift and go to state 53
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

    estatutos                      shift and go to state 35
    estatutos2                     shift and go to state 36
    asigna                         shift and go to state 37
    llamada                        shift and go to state 38
    lee                            shift and go to state 39
    escribe                        shift and go to state 40
    condicion                      shift and go to state 41
    ciclow                         shift and go to state 42
    ciclof                         shift and go to state 43
    funciones                      shift and go to state 44
    retornar                       shift and go to state 45
    tipo                           shift and go to state 19

state 33

    (25) var -> tipo COLON . var2
    (26) var2 -> . ID setCurrentID addValueVarT var3
    (27) var2 -> . ID setCurrentID addValueVarT LBRACKET CTE_I RBRACKET var3
    (28) var2 -> . ID setCurrentID addValueVarT LBRACKET CTE_I RBRACKET LBRACKET CTE_I RBRACKET var3

    ID              shift and go to state 55

    var2                           shift and go to state 54

state 34

    (14) funciones2 -> FUNCION ID . addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
    (15) funciones2 -> FUNCION ID . addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
    (16) funciones2 -> FUNCION ID . addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3
    (98) addDir -> .

    LPAREN          reduce using rule 98 (addDir -> .)

    addDir                         shift and go to state 56

state 35

    (9) principal -> PRINCIPAL LPAREN estatutos . principal2
    (10) principal2 -> . estatutos principal2
    (11) principal2 -> . RPAREN
    (65) estatutos -> . estatutos2 estatutos
    (66) estatutos -> . estatutos2
    (67) estatutos2 -> . asigna
    (68) estatutos2 -> . llamada
    (69) estatutos2 -> . lee
    (70) estatutos2 -> . escribe
    (71) estatutos2 -> . condicion
    (72) estatutos2 -> . ciclow
    (73) estatutos2 -> . ciclof
    (74) estatutos2 -> . funciones
    (75) estatutos2 -> . retornar
    (76) asigna -> . ID EQUALS asignarid exp SEMI
    (77) llamada -> . ID callFunc LPAREN exp genParameter llamada2
    (81) lee -> . LEE LPAREN exp cuadlee lee2
    (84) escribe -> . ESCRIBIR LPAREN exp cuadprint escribe2
    (87) condicion -> . IF condicion2
    (92) ciclow -> . WHILE storeWhile LPAREN exp RPAREN genGTF DO LBRACES estatutos RBRACES fillWhile
    (93) ciclow -> . DO storeWhile LBRACES estatutos RBRACES WHILE LPAREN exp RPAREN genDoWhile
    (94) ciclof -> . FOR ciclof2
    (12) funciones -> . tipo funciones2
    (13) funciones -> . VOID funciones2
    (22) retornar -> . RETURN returnFlag LPAREN retornar2
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (35) tipo -> . BOOL

    RPAREN          shift and go to state 59
    ID              shift and go to state 46
    LEE             shift and go to state 47
    ESCRIBIR        shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    VOID            shift and go to state 20
    RETURN          shift and go to state 53
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

    estatutos                      shift and go to state 57
    principal2                     shift and go to state 58
    estatutos2                     shift and go to state 36
    asigna                         shift and go to state 37
    llamada                        shift and go to state 38
    lee                            shift and go to state 39
    escribe                        shift and go to state 40
    condicion                      shift and go to state 41
    ciclow                         shift and go to state 42
    ciclof                         shift and go to state 43
    funciones                      shift and go to state 44
    retornar                       shift and go to state 45
    tipo                           shift and go to state 19

state 36

    (65) estatutos -> estatutos2 . estatutos
    (66) estatutos -> estatutos2 .
    (65) estatutos -> . estatutos2 estatutos
    (66) estatutos -> . estatutos2
    (67) estatutos2 -> . asigna
    (68) estatutos2 -> . llamada
    (69) estatutos2 -> . lee
    (70) estatutos2 -> . escribe
    (71) estatutos2 -> . condicion
    (72) estatutos2 -> . ciclow
    (73) estatutos2 -> . ciclof
    (74) estatutos2 -> . funciones
    (75) estatutos2 -> . retornar
    (76) asigna -> . ID EQUALS asignarid exp SEMI
    (77) llamada -> . ID callFunc LPAREN exp genParameter llamada2
    (81) lee -> . LEE LPAREN exp cuadlee lee2
    (84) escribe -> . ESCRIBIR LPAREN exp cuadprint escribe2
    (87) condicion -> . IF condicion2
    (92) ciclow -> . WHILE storeWhile LPAREN exp RPAREN genGTF DO LBRACES estatutos RBRACES fillWhile
    (93) ciclow -> . DO storeWhile LBRACES estatutos RBRACES WHILE LPAREN exp RPAREN genDoWhile
    (94) ciclof -> . FOR ciclof2
    (12) funciones -> . tipo funciones2
    (13) funciones -> . VOID funciones2
    (22) retornar -> . RETURN returnFlag LPAREN retornar2
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (35) tipo -> . BOOL

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LEE resolved as shift
  ! shift/reduce conflict for ESCRIBIR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    RPAREN          reduce using rule 66 (estatutos -> estatutos2 .)
    RBRACES         reduce using rule 66 (estatutos -> estatutos2 .)
    ID              shift and go to state 46
    LEE             shift and go to state 47
    ESCRIBIR        shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    VOID            shift and go to state 20
    RETURN          shift and go to state 53
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

  ! ID              [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! LEE             [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! ESCRIBIR        [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! IF              [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! WHILE           [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! DO              [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! FOR             [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! VOID            [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! RETURN          [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! INT             [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! FLOAT           [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! CHAR            [ reduce using rule 66 (estatutos -> estatutos2 .) ]
  ! BOOL            [ reduce using rule 66 (estatutos -> estatutos2 .) ]

    estatutos2                     shift and go to state 36
    estatutos                      shift and go to state 60
    asigna                         shift and go to state 37
    llamada                        shift and go to state 38
    lee                            shift and go to state 39
    escribe                        shift and go to state 40
    condicion                      shift and go to state 41
    ciclow                         shift and go to state 42
    ciclof                         shift and go to state 43
    funciones                      shift and go to state 44
    retornar                       shift and go to state 45
    tipo                           shift and go to state 19

state 37

    (67) estatutos2 -> asigna .

    ID              reduce using rule 67 (estatutos2 -> asigna .)
    LEE             reduce using rule 67 (estatutos2 -> asigna .)
    ESCRIBIR        reduce using rule 67 (estatutos2 -> asigna .)
    IF              reduce using rule 67 (estatutos2 -> asigna .)
    WHILE           reduce using rule 67 (estatutos2 -> asigna .)
    DO              reduce using rule 67 (estatutos2 -> asigna .)
    FOR             reduce using rule 67 (estatutos2 -> asigna .)
    VOID            reduce using rule 67 (estatutos2 -> asigna .)
    RETURN          reduce using rule 67 (estatutos2 -> asigna .)
